--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
 [build]
-  functions = "functions"
+base = "/public"
+publish = "public"
+functions = "functions"
 
 [[redirects]]
-  from = "/functions/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
