--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
-publish = "public"
-functions = "functions"
+  functions = "functions"
 
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+  from = "/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
