Refactor project to split functions into separate scripts for modularity

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  functions = "functions"
+functions = "./functions"
+publish = "./public"
 
-[[redirects]]
-  from = "/functions/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+[dev]
+functions = "./functions"
