Refactor code to modular structure and split functions into separate files

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-functions = "./functions"
-publish = "./public"
+  publish = "public"
 
-[dev]
-functions = "./functions"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
