--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  publish = "public"
+functions = "./functions"
+publish = "./public"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[dev]
+functions = "./functions"
