Deactivate 'More' button and update functionality to handle results loading correctly

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-functions = "./functions"
-publish = "./public"
+  functions = "functions"
 
-[dev]
-functions = "./functions"
+[[redirects]]
+  from = "/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
