--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-    "name": "restaurant-finder",
-    "version": "1.0.0",
-    "description": "Restaurant Finder Tool",
-    "main": "public/app.js",
-    "scripts": {
-        "start": "netlify dev",
-        "build": "echo 'Building the project...' && exit 0"
-    },
-    "dependencies": {
-        "node-fetch": "^2.6.1"
-    },
-    "author": "Your Name",
-    "license": "MIT"
+  "name": "fantastic-goggles",
+  "version": "1.0.0",
+  "description": "A simple project to fetch nearby restaurants using Google Places API and Netlify Functions",
+  "main": "index.js",
+  "scripts": {
+    "build": "echo 'Building the project...' && exit 0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
+  },
+  "author": "",
+  "license": "ISC"
 }
