--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "fantastic-goggles",
+  "name": "restaurant-finder-v3",
   "version": "1.0.0",
   "description": "A simple project to fetch nearby restaurants using Google Places API and Netlify Functions",
   "main": "index.js",
   "scripts": {
-    "build": "echo 'Building the project...' && exit 0"
+    "build": "echo 'Building the project...'",
+    "start": "netlify dev"
   },
   "dependencies": {
     "node-fetch": "^2.6.1"
