Move JavaScript modules to public directory and update import paths.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
-  publish = "public"
   functions = "functions"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/functions/*"
+  to = "/.netlify/functions/:splat"
   status = 200
